# Cards

./: .bazelrc  .gitignore  .swiftlint.yml  BUILD  BUILD.bazel  Cards.xctestplan  Info.plist  MODULE.bazel  Makefile  Package.resolved  Package.swift  Readme.md  check-cicd.sh  context.md  run_swiftlint.sh  test_cards.json  xcode_update.sh  xcodeproj.bazelrc
.amazonq/cli-agents/: CardsEngineer.json
.amazonq/prompts/: AppleCodeReview.md
.amazonq/rules/: CardProject.md  DevelopmentPrinciples.md  SwiftPreferences.md  TestingGuidelines.md
.github/workflows/: ci.yml  deploy.yml  export-asc-creds.yml  release.yml  website.yml
.kiro/steering/: project-context.md
Cards/: BUILD  BarcodeView.swift  CameraScannerView.swift  CardItem.swift  CardItemView.swift  Cards.entitlements  CardsApp.swift  ContentView.swift  DeepLinkManager.swift  EditCardItemView.swift  PortraitLockedView.swift  ScannerViewControllerDelegate.swift
Cards.xcodeproj/: project.pbxproj
Cards/App/: CardsApp.swift
Cards/Navigation/: NavigationManager.swift  NavigationRoute.swift
Cards/Services/: Loader.swift  PerformanceTracker.swift
CardsTests/: BUILD  BarcodeTypeTests.swift  BarcodeViewTests.swift  CardItemTests.swift  CardsTests.swift  DeepLinkTests.swift  NavigationTests.swift  PerformanceTrackerTests.swift  SettingsViewTests.swift
CardsUITests/: BUILD  CardsUITests.swift  CardsUITestsLaunchTests.swift
DesignAssets/: Icon.ai
Website/: deploy.sh
Website/src/: demo.html  index.html  privacy.html  style.css
docs/: CICD_SETUP.md  DEPLOYMENT.md
fastlane/: Appfile  Fastfile
fastlane/metadata/: copyright.txt
metadata/en-GB/: keywords.txt  name.txt  privacy_url.txt  promotional_text.txt  review_notes.txt  subtitle.txt
scripts/: asc-auth.sh  asc-submit.sh  ci-resolve-sim.sh  coverage-merge.sh  coverage-report.sh  coverage-run.sh  coverage-stash.sh  deploy-appstore.sh  deploy-testflight.sh  upload-metadata.sh  upload-screenshots.sh
tools/: benchmark.sh
(+56 files in other folders)
